@@ -1,6 +1,7 @@
 == In Git
 
 === New features
+* Detect limit for negative tags (#636 Aslak Hellesøy)
 * Support for RSpec 2 doubles (mocks and stubs) (Aslak Hellesøy)
 
 == 0.8.3 (2010-06-16)
